deploy/k8s/dev/image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-service
  labels:
    app: image-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-service
  template:
    metadata:
      labels:
        app: image-service
    spec:
      containers:
        - name: image-service
          image: localhost/image-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 4093
            - containerPort: 3107
---
apiVersion: v1
kind: Service
metadata:
  name: image-service
spec:
  selector:
    app: image-service
  ports:
    - protocol: TCP
      port: 3107
      targetPort: 3107
  type: ClusterIP
