deploy/k8s/dev/mail.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail-service
  labels:
    app: mail-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mail-service
  template:
    metadata:
      labels:
        app: mail-service
    spec:
      containers:
      - name: mail-service
        image: localhost/mail-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3108
---
apiVersion: v1
kind: Service
metadata:
  name: mail-service
spec:
  selector:
    app: mail-service
  ports:
    - protocol: TCP
      port: 3108
      targetPort: 3108
  type: ClusterIP
