deploy/k8s/dev/payments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-service
  labels:
    app: payments-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments-service
  template:
    metadata:
      labels:
        app: payments-service
    spec:
      containers:
      - name: payments-service
        image: localhost/payments-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3105
---
apiVersion: v1
kind: Service
metadata:
  name: payments-service
spec:
  selector:
    app: payments-service
  ports:
    - protocol: TCP
      port: 3105
      targetPort: 3105
  type: ClusterIP
